# NIM2

./: .gitignore  CMakeLists.txt  Makefile  Makefile-ps  README.md  READMEMORE.md  ROFILE  Warning  cleanBuild.sh  linux_prereq.sh  main.cpp  run.bat  runDebug.bat  termux_prereq.sh
enums/: enums.h
include/: Animation.h  Game.h  IRipplePrint.h  IWindowsClass.h  Ripple.h  RippleItem.h  RippleList.h  RipplePrint.h  WindowClass.h  enums.h  memoryTrack.h
src/: Animation.cpp  Game.cpp  Ripple.cpp  RippleItem.cpp  RippleList.cpp  RipplePrint.cpp  WindowClass.cpp  main.cpp  memoryTrack.cpp
